# Wind_Power_Forcasting

./: app1.py  available_variables.txt  buoy_visualization.py  buoy_visualization.py.py
Blade_Profile_sim/: CMakeLists.txt  README.md
Blade_Profile_sim/include/: application.hpp  blade_optimizer.hpp  blade_physics.hpp  cad_loader.hpp  camera.hpp  mesh.hpp  naca_generator.hpp  renderer.hpp  shader.hpp  stats_overlay.hpp  text_renderer.hpp  wind_simulation.hpp
Blade_Profile_sim/include/KHR/: khrplatform.h
Blade_Profile_sim/include/glad/: glad.h
Blade_Profile_sim/src/: application.cpp  blade_optimizer.cpp  blade_physics.cpp  cad_loader.cpp  camera.cpp  glad.c  main.cpp  mesh.cpp  naca_generator.cpp  renderer.cpp  shader.cpp  stats_overlay.cpp  text_renderer.cpp  wind_simulation.cpp
Part2/: sample.txt
ireland_marine_intel/: .env  Dockerfile  README.md  debug_data.py  docker-compose.yml  nginx.conf  requirements.txt  run_dev.sh  test_app.py
ireland_marine_intel/analysis/: __init__.py  flow_analysis.py  network_analysis.py
ireland_marine_intel/api/: main.py
ireland_marine_intel/config/: __init__.py  settings.py
notebooks/: 00_data_exploration.ipynb  00_data_preparation.ipynb  00_data_preparation_uk.ipynb  01_correlation_analysis.ipynb  01_second_attempt.ipynb  Matthew_met_data.ipynb  app.ipynb  app1.py  check_exact_variables.py  irish_buoy_sample_data.csv  irish_buoy_variables.csv  requirements.txt  simple_lstm_buoy_model.pth
old_notebooks/: 00_data_exploration.ipynb  02_ml_beggining.ipynb  03_data_preparation.ipynb  baseline_lstm.pth
src/: irish_M_buoy_data.py  irish_buoy_data.py  matthew_met_buoy_data.py  uk_buoy_data.py
(+24 files in other folders)
